--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Team Apple Prediction</title>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body >
  
