--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -12,7 +12,7 @@
    <input type="text" name="phrase"></input>
    <input type="submit" value="Evaluate"></input>
   </form>
-  <h2> Sentence : {{phrase }}!</h2>
+  <h2> Sentence : {{phrase }}</h2>
     
   
 </body>
