--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1 style="text-align: center; color: #3f7320;">French text level</h1>
+          <h1 style="text-align: center; color: #205273;">French text level</h1>
           <hr>
           <h1>Team Apple</h1>
           <h4>
