--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -16,7 +16,7 @@
           Write a sentence
           </h4>
           <form action="{{" url_for("root")}}="" method="POST">
-            <textarea name="textinput" rows="8" cols="80">Write a sentence here</textarea>
+            <center><textarea name="textinput" rows="5" cols="55" placeholder="Write something." autocapitalize="sentences" >Write a sentence here</textarea></center>
             <br>
             <input type="submit" value="Test">
           </form
